fix(css-components): add missing border

--- a/css-components/components-src/stylus/components/list.styl
+++ b/css-components/components-src/stylus/components/list.styl
@@ -199,6 +199,7 @@ list__item()
 .list
   list()
   padding var-list-padding
+  border-top var-list-border-top
   border-bottom var-list-border-bottom
   retina-list-border()
 
